// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MarkedText> that renders a text block while marking matched substrings should mark special characters 1`] = `
<MarkedText
  marker=".?!#$%^&()[]:;\\\\?''"
>
  <Text>
    <p>
      <mark
        className="MarkedText__marked"
        key="match0"
      >
        .?!#$%^&()[]:;\\?''
      </mark>
    </p>
  </Text>
</MarkedText>
`;

exports[`<MarkedText> that renders a text block while marking matched substrings should pass props to Text 1`] = `
<MarkedText
  context="primary"
  inline={true}
  marker="text"
>
  <Text
    context="primary"
    inline={true}
  >
    <span
      className="Text--context_primary"
    >
      Some 
      <mark
        className="MarkedText__marked"
        key="match1"
      >
        text
      </mark>
       content
    </span>
  </Text>
</MarkedText>
`;

exports[`<MarkedText> that renders a text block while marking matched substrings should render correctly when there are matches 1`] = `
<MarkedText
  marker="text"
>
  <Text>
    <p>
      Some 
      <mark
        className="MarkedText__marked"
        key="match1"
      >
        text
      </mark>
       content
    </p>
  </Text>
</MarkedText>
`;

exports[`<MarkedText> that renders a text block while marking matched substrings should render correctly when there are no matches 1`] = `
<MarkedText
  marker="else"
>
  <Text>
    <p>
      Some text content
    </p>
  </Text>
</MarkedText>
`;

exports[`<MarkedText> that renders a text block while marking matched substrings should render correctly with multiple matches 1`] = `
<MarkedText
  marker="te"
>
  <Text>
    <p>
      Some 
      <mark
        className="MarkedText__marked"
        key="match1"
      >
        te
      </mark>
      xt con
      <mark
        className="MarkedText__marked"
        key="match3"
      >
        te
      </mark>
      nt that has 
      <mark
        className="MarkedText__marked"
        key="match5"
      >
        te
      </mark>
      xt more then once
    </p>
  </Text>
</MarkedText>
`;
